--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.360.0",
     "next": "14.1.4",
     "react": "^18",
