--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/nodemailer": "^6.4.14",
     "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^11.0.20",
     "lucide-react": "^0.360.0",
     "next": "14.1.4",
     "nodemailer": "^6.9.13",
