--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -14,6 +15,7 @@
     "framer-motion": "^11.0.20",
     "lucide-react": "^0.360.0",
     "next": "14.1.4",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
