--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "@types/nodemailer": "^6.4.14",
+    "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
-    "framer-motion": "^11.0.20",
+    "framer-motion": "^11.0.27",
     "lucide-react": "^0.360.0",
     "next": "14.1.4",
     "next-sitemap": "^4.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
