Finish website redesign

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/nodemailer": "^6.4.14",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
